# Cpp_Exercises

./: .gitignore  CMakeLists.txt  Readme.md  exercise_1  exercise_1.cpp  exercise_10  exercise_10.cpp  exercise_2  exercise_3  exercise_4  exercise_5  exercise_5.cpp  exercise_6  exercise_7  exercise_7.cpp  exercise_8  exercise_8.cpp  exercise_9
algorithm/: Readme.md
algorithm/sorting_algorithms/: insertion_sort.cpp
basic_level/: exercise_2.cpp  exercise_4.cpp  exercise_6.cpp
cpp/advanced_level/: Readme.md
cpp/basic_level/: exercise_3.cpp  exercise_9.cpp
cpp/mid_level/: Readme.md  exercise_1.cpp  exercise_10.cpp  exercise_2.cpp  exercise_3.cpp  exercise_7.cpp
mid_level/: Readme.md  exercise_4.cpp  exercise_5.cpp  exercise_6.cpp  exercise_8.cpp  exercise_9.cpp
