cmake_minimum_required(VERSION 3.22.1)
project(C++_Exercises LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# basics
add_executable(exersice_1 basics/exercise_1.cpp)
add_executable(exercise_2 basics/exercise_2.cpp)
add_executable(exercise_3 basics/exercise_3.cpp)
add_executable(exercise_4 basics/exercise_4.cpp)
add_executable(exersice_5 basics/exercise_5.cpp)
add_executable(exercise_6 basics/exercise_6.cpp)
add_executable(exercise_7 basics/exercise_7.cpp)
add_executable(exercise_8 basics/exercise_8.cpp)
add_executable(exersice_9 basics/exercise_9.cpp)
add_executable(exercise_10 basics/exercise_10.cpp)
