cmake_minimum_required(VERSION 3.22.1)
project(C++_Exercises LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# basic_level
add_executable(exersice_1 basic_level/exercise_1.cpp)
add_executable(exercise_2 basic_level/exercise_2.cpp)
add_executable(exercise_3 basic_level/exercise_3.cpp)
add_executable(exercise_4 basic_level/exercise_4.cpp)
add_executable(exersice_5 basic_level/exercise_5.cpp)
add_executable(exercise_6 basic_level/exercise_6.cpp)
add_executable(exercise_7 basic_level/exercise_7.cpp)
add_executable(exercise_8 basic_level/exercise_8.cpp)
add_executable(exersice_9 basic_level/exercise_9.cpp)
add_executable(exercise_10 basic_level/exercise_10.cpp)

# mid_level
add_executable(exersice_1 mid_level/exercise_1.cpp)
add_executable(exercise_2 mid_level/exercise_2.cpp)
add_executable(exercise_3 mid_level/exercise_3.cpp)
add_executable(exercise_4 mid_level/exercise_4.cpp)
add_executable(exersice_5 mid_level/exercise_5.cpp)
add_executable(exercise_6 mid_level/exercise_6.cpp)
add_executable(exercise_7 mid_level/exercise_7.cpp)
add_executable(exercise_8 mid_level/exercise_8.cpp)
add_executable(exersice_9 mid_level/exercise_9.cpp)
add_executable(exercise_10 mid_level/exercise_10.cpp)
