cmake_minimum_required(VERSION 3.22.1)
project(C++_Exercises LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# basic_level
add_executable(exersice_1_basic cpp/basic_level/exercise_1.cpp)
add_executable(exercise_2_basic cpp/basic_level/exercise_2.cpp)
add_executable(exercise_3_basic cpp/basic_level/exercise_3.cpp)
add_executable(exercise_4_basic cpp/basic_level/exercise_4.cpp)
add_executable(exersice_5_basic cpp/basic_level/exercise_5.cpp)
add_executable(exercise_6_basic cpp/basic_level/exercise_6.cpp)
add_executable(exercise_7_basic cpp/basic_level/exercise_7.cpp)
add_executable(exercise_8_basic cpp/basic_level/exercise_8.cpp)
add_executable(exersice_9_basic cpp/basic_level/exercise_9.cpp)
add_executable(exercise_10_basic cpp/basic_level/exercise_10.cpp)

# mid_level
add_executable(exersice_1_middle cpp/mid_level/exercise_1.cpp)
add_executable(exercise_2_middle cpp/mid_level/exercise_2.cpp)
add_executable(exercise_3_middle cpp/mid_level/exercise_3.cpp)
add_executable(exercise_4_middle cpp/mid_level/exercise_4.cpp)
add_executable(exersice_5_middle cpp/mid_level/exercise_5.cpp)
add_executable(exercise_6_middle cpp/mid_level/exercise_6.cpp)
add_executable(exercise_7_middle cpp/mid_level/exercise_7.cpp)
add_executable(exercise_8_middle cpp/mid_level/exercise_8.cpp)
add_executable(exersice_9_middle cpp/mid_level/exercise_9.cpp)
add_executable(exercise_10_middle cpp/mid_level/exercise_10.cpp)

# advanced_level
add_executable(exersice_1_advanced cpp/advanced_level/exercise_1.cpp)
add_executable(exercise_2_advanced cpp/advanced_level/exercise_2.cpp)
add_executable(exercise_3_advanced cpp/advanced_level/exercise_3.cpp)
add_executable(exercise_4_advanced cpp/advanced_level/exercise_4.cpp)
add_executable(exersice_5_advanced cpp/advanced_level/exercise_5.cpp)
add_executable(exercise_6_advanced cpp/advanced_level/exercise_6.cpp)
add_executable(exercise_7_advanced cpp/advanced_level/exercise_7.cpp)
add_executable(exercise_8_advanced cpp/advanced_level/exercise_8.cpp)
add_executable(exersice_9_advanced cpp/advanced_level/exercise_9.cpp)
add_executable(exercise_10_advanced cpp/advanced_level/exercise_10.cpp)


